# DRseries

./: README.md
OSS_Licenses_And_Sources/: oss_licenses.txt
OSS_Licenses_And_Sources/alsa-lib-1.1.1/: .applied_patches_list  .br_filelist_before  Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
OSS_Licenses_And_Sources/alsa-utils-1.1.1/: .br_filelist_before  ChangeLog  Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac
OSS_Licenses_And_Sources/attr-2.4.47/: .applied_patches_list  .br_filelist_after  .br_filelist_before  config.status  libtool
OSS_Licenses_And_Sources/audit-2.4.4/: .br_filelist_after  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtool
OSS_Licenses_And_Sources/autossh-1.4e/: Makefile  autossh  config.h  config.h.in  config.status  configure
OSS_Licenses_And_Sources/boa-0.94.14rc21/: .applied_patches_list  .br_filelist_after  .br_filelist_before  config.status
OSS_Licenses_And_Sources/boost-1.60.0/: .applied_patches_list  .br_filelist_after  b2  project-config.jam  user-config.jam
OSS_Licenses_And_Sources/busybox-1.24.2/: .applied_patches_list  .busybox_unstripped.cmd  .config  .config.old  Makefile.flags  busybox.links  busybox_unstripped  busybox_unstripped.map  busybox_unstripped.out
OSS_Licenses_And_Sources/bzip2-1.0.6/: blocksort.sho  bzip2  bzip2-shared  bzip2recover  bzlib.sho  compress.sho  crctable.sho  decompress.sho  huffman.sho  (+2 more)
OSS_Licenses_And_Sources/ecryptfs-utils-109/tests/userspace/: Makefile  Makefile.am  Makefile.in  lfs.sh  tests.rc  v1-to-v2-wrapped-passphrase.sh  wrap-unwrap.sh
OSS_Licenses_And_Sources/ecryptfs-utils-109/tests/userspace/lfs/: test.c
OSS_Licenses_And_Sources/ecryptfs-utils-109/tests/userspace/v1-to-v2-wrapped-passphrase/: test.c  wp01  wp02  wp03  wp04  wp05
OSS_Licenses_And_Sources/ecryptfs-utils-109/tests/userspace/wrap-unwrap/: test.c
OSS_Licenses_And_Sources/shveu-1.7.2/src/libshveu/: Makefile  Makefile.am  Makefile.in  Version_script  Version_script.in  libshveu.la  libshveu_la-veu.lo  shveu_regs.h  veu.c
OSS_Licenses_And_Sources/shveu-1.7.2/src/libshveu/.libs/: libshveu.lai  libshveu.so.5
OSS_Licenses_And_Sources/shveu-1.7.2/src/tools/: Makefile  Makefile.am  Makefile.in  shveu-convert  shveu-convert.c  shveu-display  shveu-display.c
OSS_Licenses_And_Sources/uiomux-1.6.2/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  uiomux-uninstalled.pc  uiomux.pc
OSS_Licenses_And_Sources/uiomux-1.6.2/doc/: Doxyfile  Makefile  Makefile.in
OSS_Licenses_And_Sources/uiomux-1.6.2/doc/libuiomux/html/: arch__sh_8h.html  arch__sh_8h_source.html  dump_8h.html  dump_8h_source.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  group__building.html  group__configuration.html  group__install.html  index.html  modules.html  resource_8h.html  resource_8h_source.html  system_8h.html  system_8h_source.html  uiomux_8h.html  uiomux_8h_source.html
OSS_Licenses_And_Sources/uiomux-1.6.2/doc/libuiomux/latex/: arch__sh_8h.tex  doxygen.sty  dump_8h.tex  files.tex  group__building.tex  group__configuration.tex  group__install.tex  index.tex  modules.tex  refman.tex  resource_8h.tex  system_8h.tex  uiomux_8h.tex
OSS_Licenses_And_Sources/uiomux-1.6.2/include/: Makefile  Makefile.in
OSS_Licenses_And_Sources/uiomux-1.6.2/include/uiomux/: Makefile  Makefile.in  arch_sh.h  resource.h  system.h  uiomux.h
OSS_Licenses_And_Sources/uiomux-1.6.2/src/: Makefile  Makefile.in
OSS_Licenses_And_Sources/uiomux-1.6.2/src/examples/: Makefile  Makefile.in
OSS_Licenses_And_Sources/uiomux-1.6.2/src/libuiomux/: Makefile  Makefile.am  Makefile.in  Version_script  Version_script.in  uio.c  uio.h  uio.lo  uiomux.c  uiomux.lo  uiomux_private.h
OSS_Licenses_And_Sources/uiomux-1.6.2/src/libuiomux/.libs/: libuiomux.la  libuiomux.lai
OSS_Licenses_And_Sources/uiomux-1.6.2/src/tests/: Makefile  Makefile.am  Makefile.in  double-open  exit-locked  fork  fork-threads  fork-threads.c  lock-unlock  locking  locking.c  multiple-open  named-open  named-open.c  noop  threads  threads.c  timeout  timeout.c  uiomux_tests.h  wakeup  wakeup.c
OSS_Licenses_And_Sources/uiomux-1.6.2/src/tools/: Makefile  Makefile.in  uiomux
(+4566 files in other folders)
